Handle Exception Authorization

--- a/employeeservice/src/main/resources/application.properties
+++ b/employeeservice/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
+eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
+
