--- a/commanservice/src/main/resources/application.yml
+++ b/commanservice/src/main/resources/application.yml
@@ -3,3 +3,17 @@ spring:
     bootstrap-servers: "${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}"
     consumer:
       group-id: "${KAFKA_GROUP_ID:default-group}"
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: namle12122003@gmail.com
+    password: lsgh zwbf cvdm hynt
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+        transport:
+          protocol: smtp
+
