--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,6 +29,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build-and-push  # Nếu muốn chỉ deploy khi build thành công
 
     steps:
       - uses: actions/checkout@v4
@@ -40,4 +41,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          script: whoami
+          script_path: scripts/deploy.sh
+          envs: DOCKER_USERNAME
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
